# IDC-REST-MCP

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  build-and-deploy-dev.yml  ci.yml  deploy.yml  gitleaks.yml  promote.yml
dev/: api_v3_plan.md  architecture.md  caching_and_cdn.md  cloudbuild.yaml  deployment.md  developer_guide.md  smoke_openapi_examples.py
docs/: user-guide.md
src/idc_api/: __init__.py  settings.py
src/idc_api/core/: __init__.py  context.py  errors.py  filters.py  models.py  schema.py  version.py
src/idc_api/core/backend/: __init__.py  base.py  duckdb_backend.py
src/idc_api/core/services/: __init__.py  citations.py  clinical.py  cohort.py  discovery.py  download.py  licenses.py  manifest.py  query.py  viewer.py
src/idc_api/mcp/: __init__.py  server.py
src/idc_api/rest/: __init__.py  app.py
tests/: conftest.py  test_backend_guards.py  test_clinical.py  test_mcp.py  test_parity.py  test_rest.py  test_services_golden.py  test_specialized_indices.py
