[project]
name = "idc-api"
version = "3.0.0.dev0"
description = "LLM-first REST API and MCP server for NCI Imaging Data Commons, backed by idc-index Parquet + DuckDB."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Imaging Data Commons" }]
keywords = ["IDC", "DICOM", "cancer imaging", "MCP", "REST", "idc-index"]

dependencies = [
    # Query engine + data
    "idc-index>=0.12.2",
    "duckdb>=1.5.4",
    "pyarrow>=15",
    # Shared models / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # REST adapter
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    # MCP adapter (official SDK; bundles FastMCP server API)
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "httpx>=0.27",          # FastAPI TestClient transport
    "pytest-asyncio>=0.23",
    "ruff>=0.15.20",
    "bandit>=1.7",          # static security lint (CI)
    "pip-audit>=2.7",       # dependency CVE scan (CI)
]

[project.scripts]
# Run the REST API (uvicorn under the hood)
idc-api = "idc_api.rest.app:main"
# Run the MCP server (stdio by default; --http for streamable-http)
idc-mcp = "idc_api.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idc_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
